# rust-game-dev-workshop

./: Cargo.toml
src/: components.rs  game.rs  main.rs  resources.rs
src/systems/: animator.rs  input.rs  mod.rs  physics.rs  renderer.rs
