[package]
name = "game_dev_workshop"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.32", features = ["image"] }
specs = { version = "0.15", features = ["specs-derive", "shred-derive"] }
rand = "0.7"

[features]
debug = ["specs/nightly"]
